[tool.poetry]
name = "file-trans"
version = "0.1.0"
description = "File transmit through a relay server"
authors = ["Jarvistin <blizzardwj@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipywidgets = "^8.1.5"
ipython = "^9.0.0"
tqdm = "^4.67.1"
paramiko = "^3.5.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
