[project]
name = "file-transmission"
version = "0.1.0"
description = ""
authors = [
    {name = "Justin",email = "blizzardwj@163.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paramiko (>=3.5.1)",
    "tqdm (>=4.67.1)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.5"
ipython = ">=9.0.2"
ipywidgets = ">=8.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
